# OpenIMU

./: .clangd  .flake8  .gitignore  CMakeLists.txt  README.md  dockerfile  dynamics_printout.md  log_schema.yaml  mkdocs.yml  rt_playback_conf.json  system_constants.json
.devcontainer/: devcontainer.json
cpp_source/: .gitignore  CMakeLists.txt  main.cpp  system_constants.json
cpp_source/.cache/clangd/index/: IMU.cpp.1A065247AAFEDC12.idx  IMU.cpp.C7DCE52938FEE7E7.idx  IMU.hpp.9F44F21D63AF9926.idx  IMU_Matrices.hpp.BAB13FC2F94F02AE.idx  IMU_Matrices.hpp.E4835E61AFB8576E.idx  logger.hpp.546DFE9F210A8154.idx  logger_conversions.hpp.87818D7602D9B957.idx  main.cpp.726F0609B136E0A1.idx  measurement_handler.cpp.6EC7BF84F49BB4A4.idx  measurement_handler.hpp.0B556910A82C1CF0.idx  thread_safe_queue.hpp.3DD172A28A439E69.idx
cpp_source/conf/: rt_playback_conf.json  system_constants.json
cpp_source/config/: rt_playback_conf.json  system_constants.json
cpp_source/include/: IMU.hpp  IMU_Matrices.hpp  UKF.hpp  estimator_interface.hpp  logger.hpp  logger_conversions.hpp  measurement_handler.hpp  measurement_model.hpp  safe_cholesky.hpp  thread_safe_queue.hpp  timed_playback_sim.hpp  ukf_defs.hpp
cpp_source/logging/: logger.hpp  logger_conversions.hpp
cpp_source/scripts/: get_deps.sh  run_tests.sh
cpp_source/sim/include/: measurement_handler.hpp  measurement_model.hpp  timed_playback_sim.hpp
cpp_source/sim/src/: measurement_handler.cpp  timed_playback_sim.cpp
cpp_source/src/: IMU.cpp  UKF.cpp  main.cpp  measurement_handler.cpp  measurement_model.cpp  timed_playback_sim.cpp
cpp_source/tests/: test_retrodict.cpp  test_sim_scenario.cpp
cpp_source/ukf_core/include/: UKF.hpp  estimator_interface.hpp  thread_safe_queue.hpp  ukf_defs.hpp
cpp_source/ukf_core/src/: UKF.cpp
docs/: UKF_dependency_graph.md  index.md  python.md  ukf_dependency_graph.dot
docs/myProjectCpp/: index.md
python/: README.txt  equations_of_motion.py  generate_cpp_index.py  log_parser.py  plotter.py  plotter_app.py  requirements.txt  rotation_matrices.py  ukf_codegen.py  ukf_model.py
python/imu_data_generation/: imu_data_generator.py  sim_match_gnss.py
python/utils/: pvt_loader.py  rotation_matrices.py  sim_playback.py  stochastic.py  utils.py  write_to_hpp.py
python/web_resources/: web_resources.py  web_server.py
src/: IMU_model.cpp
